<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="Main">

        <SwitchPreferenceCompat
            android:summary="@string/service_summary"
            app:key="service_pref"
            app:title="@string/service_title" />

        <SwitchPreferenceCompat
            android:dependency="service_pref"
            app:key="adb_mode_pref"
            app:summary="@string/adb_mode_summary"
            app:title="@string/adb_mode_title" />

        <Preference
            android:summary="@string/blacklist_summary"
            android:title="@string/blacklist_title"
            app:dependency="service_pref"
            app:key="blacklist_pref" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            app:dependency="service_pref"
            app:key="suggestion_pref"
            app:summary="@string/suggest_summary"
            app:title="@string/suggest_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Security">

        <SwitchPreferenceCompat
            app:icon="@drawable/pin_ic_lock_outline"
            app:key="pin_lock_pref"
            app:title="@string/pin_lock_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Other">

        <SwitchPreferenceCompat
            app:icon="@drawable/ic_delete_outlined"
            app:key="auto_delete_pref"
            app:title="@string/auto_delete_title" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            app:key="swipe_delete_pref"
            app:summary="@string/swipe_summary"
            app:title="@string/swipe_title" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            app:key="trim_clip_pref"
            app:summary="@string/trim_summary"
            app:title="@string/trim_title" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            app:key="clipboard_clear_pref"
            app:summary="@string/clipboard_clear_summary"
            app:title="@string/clipboard_clear_title" />

        <Preference
            app:key="reset_intro_pref"
            app:summary="This also includes the dialogs that are shown to demonstrate a particular feature."
            app:title="Reset onboarding screens" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Experimental">

        <SwitchPreferenceCompat
            android:defaultValue="true"
            app:key="image_markdown_pref"
            app:summary="@string/image_render_summary"
            app:title="@string/image_render_title" />

    </PreferenceCategory>
</PreferenceScreen>
