<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <SwitchPreferenceCompat
        app:defaultValue="true"
        app:key="dark_pref"
        app:summary="@string/dark_summary"
        app:title="@string/dark_title" />

    <PreferenceCategory app:title="@string/category_customize">

        <com.kpstv.xclipper.ui.fragments.settings.look_feel.CustomizeQuickTipPreference
            app:isPreferenceVisible="false"
            app:key="customize_tip_pref"
            tools:isPreferenceVisible="true" />

        <Preference
            app:icon="@android:color/transparent"
            app:key="color_primary_pref"
            app:summary="@string/color_primary_summary"
            app:title="@string/color_primary_title" />

        <Preference
            app:icon="@android:color/transparent"
            app:key="color_accent_pref"
            app:summary="@string/color_accent_summary"
            app:title="@string/color_accent_title" />

        <Preference
            app:icon="@android:color/transparent"
            app:key="launcher_icon_pref"
            app:summary="@string/launcher_icon_summary"
            app:title="@string/launcher_icon_title" />

    </PreferenceCategory>

</PreferenceScreen>